 src/pipeline.cxx, src/prepared_statement.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/subtransaction.cxx, src/tablereader.cxx,
 src/tablestream.cxx, src/tablewriter.cxx, src/transaction.cxx,
 src/transaction_base.cxx:
  - Qualified parameter types identically between declarations and definitions
  - Works around Doxygen problem
2006-08-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger.hxx:
  - Forbid copy construction and copy assignment (thanks Bart Samwel)
2006-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, config/sample-headers/libpq/7.4,
 config/sample-headers/libpq/8.0, config/sample-headers/libpq/8.1,
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Allow server version to be queried
  - Allow protocol version to be queried
  - Compatibility fix: check for "std" namespace and gcc 3.4
 include/pqxx/util.hxx:
  - Removed PQXX_LIBEXPORT directive from PQAlloc class template
2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Allow test for gcc visibility attribute to fail if not GNU C++
2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, configitems, src/connection_base.hxx:
  - Use GNU/Linux poll() instead of select(), if available
2006-07-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 pqxx-config.in:
  - Is deprecated, and now says so (thanks Roger Leigh)
2006-07-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Test for pkg-config (Roger Leigh)
2006-07-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Missing parenthesis.  Thanks Koen Stegen.
2006-07-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, include/pqxx/result.hxx, src/result.cxx:
  - Lots of new, more specific sql_error-derived exception types
  - Thanks Tomek Rydzynski for getting me going with this
2006-07-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease, tools/splitconfig:
  - Use new "maketemporary" script to work around mktemp differences